--- a/style.css
+++ b/style.css
@@ -336,6 +336,9 @@ html {
     padding: 10px;
     font-size: 16px;
   }
+  .fondo {
+    display: none;
+  }
 }
 /* Para pantallas aún más pequeñas (teléfonos) */
 @media only screen and (max-width: 480px) {
